set up release 0.0.2

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+Notes for release 0.0.2
+
+Bugfix update
+
 Notes for release 0.0.1
 
 clj-decline is a validation library that hopefully will turn out to be
