--- a/README
+++ b/README
@@ -12,8 +12,13 @@ restrict itself to web and will never do so. With regards to the kind
 of rejection messages (errors) it can generate, the only restriction
 is that they should be indexed by a key.
 
+Read the RANT for the long story.
+
 ** This is still very much a work in progress - expect major breaking
 changes in the next couple of releases **
+
+For now, the functions are all documented inline, and the best place
+to look for examples is the test code.
 
 To prevent havock, I won't be releasing SNAPSHOT releases. Instead,
 there will as many minor releases as needed to push changes/fixes.
