specify copyright & license

--- a/README
+++ b/README
@@ -17,5 +17,8 @@ to look for examples is the test code.
 To prevent havock, I won't be releasing SNAPSHOT releases. Instead,
 there will as many minor releases as needed to push changes/fixes.
 
-Joost Diepenmaat
+Copyright (C) 2011 Joost Diepenmaat, Zeekat Softwareontwikkeling
+
 joost@zeekat.nl
+
+Distributed under the Eclipse Public License, the same as Clojure.
