start documenting changes for next release

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Notes for next.release
+
+* Added motivation rant and some more documentation.
+* Simplification of code.
+
 Notes for release 0.0.2
 
 Bugfix release
