documentation update and code clarification

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@ Notes for next.release
 
 * Added motivation rant and some more documentation.
 * Simplification of code.
+* Renamed `validate' to `validation' for clarity.
 
 Notes for release 0.0.2
 
